// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsSearch ResultsList tests should not render when empty results 1`] = `
<ResultsList
  results={Array []}
  viewDetailsClickHandler={[Function]}
>
  <ResultsTable
    currentPage={1}
    fixed={false}
    headerActionClickHandler={null}
    headerActionComponent={
      <div>
        <NewButton
          clickHandler={[Function]}
          disabled={false}
          fluid={false}
          text="New item"
        />
        <ExportReactSearchKitResults
          exportBaseUrl="https://127.0.0.1:5000/api/items/"
        />
      </div>
    }
    name="items"
    paginationComponent={null}
    renderSegment={true}
    rowActionClickHandler={[Function]}
    rows={Array []}
    seeAllComponent={null}
    showAllResults={false}
    showMaxRows={10}
    singleLine={false}
    subtitle=""
    title=""
  >
    <Segment>
      <div
        className="ui segment"
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridRow>
              <div
                className="row"
              >
                <GridColumn
                  verticalAlign="middle"
                  width={8}
                >
                  <div
                    className="middle aligned eight wide column"
                  />
                </GridColumn>
                <GridColumn
                  textAlign="right"
                  width={8}
                >
                  <div
                    className="right aligned eight wide column"
                  >
                    <div>
                      <NewButton
                        clickHandler={[Function]}
                        disabled={false}
                        fluid={false}
                        text="New item"
                      >
                        <Button
                          as="button"
                          icon={true}
                          labelPosition="left"
                          onClick={[Function]}
                          positive={true}
                          size="small"
                        >
                          <Ref
                            innerRef={
                              Object {
                                "current": <button
                                  class="ui small icon positive left labeled button"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="plus icon"
                                  />
                                  New item
                                </button>,
                              }
                            }
                          >
                            <RefFindNode
                              innerRef={
                                Object {
                                  "current": <button
                                    class="ui small icon positive left labeled button"
                                  >
                                    <i
                                      aria-hidden="true"
                                      class="plus icon"
                                    />
                                    New item
                                  </button>,
                                }
                              }
                            >
                              <button
                                className="ui small icon positive left labeled button"
                                onClick={[Function]}
                              >
                                <Icon
                                  as="i"
                                  name="plus"
                                >
                                  <i
                                    aria-hidden="true"
                                    className="plus icon"
                                    onClick={[Function]}
                                  />
                                </Icon>
                                New item
                              </button>
                            </RefFindNode>
                          </Ref>
                        </Button>
                      </NewButton>
                      <ExportReactSearchKitResults
                        exportBaseUrl="https://127.0.0.1:5000/api/items/"
                      />
                    </div>
                  </div>
                </GridColumn>
              </div>
            </GridRow>
          </div>
        </Grid>
        <Message
          data-test="no-results"
        >
          <div
            className="ui message"
            data-test="no-results"
          >
            There are no 
            items
            .
          </div>
        </Message>
      </div>
    </Segment>
  </ResultsTable>
</ResultsList>
`;

exports[`ItemsSearch ResultsList tests should render a list of results 1`] = `
<ResultsList
  results={
    Array [
      Object {
        "created": "2018-01-01T10:05:00.000Z",
        "id": 987,
        "metadata": Object {
          "barcode": "9865745223",
          "document": Object {
            "pid": 1342,
          },
          "document_pid": 1342,
          "internal_location": Object {
            "name": "A library",
            "pid": 1,
          },
          "internal_location_pid": 1,
          "pid": 987,
          "status": "IN_BINDING",
        },
      },
    ]
  }
  viewDetailsClickHandler={[Function]}
>
  <ResultsTable
    currentPage={1}
    fixed={false}
    headerActionClickHandler={null}
    headerActionComponent={
      <div>
        <NewButton
          clickHandler={[Function]}
          disabled={false}
          fluid={false}
          text="New item"
        />
        <ExportReactSearchKitResults
          exportBaseUrl="https://127.0.0.1:5000/api/items/"
        />
      </div>
    }
    name="items"
    paginationComponent={null}
    renderSegment={true}
    rowActionClickHandler={[Function]}
    rows={
      Array [
        Object {
          "Barcode": "9865745223",
          "Circulation status": null,
          "Document ID": 1342,
          "ID": 987,
          "Internal location": "A library",
          "Location": null,
          "Medium": undefined,
          "Shelf": undefined,
          "Status": "IN_BINDING",
        },
      ]
    }
    seeAllComponent={null}
    showAllResults={false}
    showMaxRows={10}
    singleLine={false}
    subtitle=""
    title=""
  >
    <Segment>
      <div
        className="ui segment"
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridRow>
              <div
                className="row"
              >
                <GridColumn
                  verticalAlign="middle"
                  width={8}
                >
                  <div
                    className="middle aligned eight wide column"
                  />
                </GridColumn>
                <GridColumn
                  textAlign="right"
                  width={8}
                >
                  <div
                    className="right aligned eight wide column"
                  >
                    <div>
                      <NewButton
                        clickHandler={[Function]}
                        disabled={false}
                        fluid={false}
                        text="New item"
                      >
                        <Button
                          as="button"
                          icon={true}
                          labelPosition="left"
                          onClick={[Function]}
                          positive={true}
                          size="small"
                        >
                          <Ref
                            innerRef={
                              Object {
                                "current": <button
                                  class="ui small icon positive left labeled button"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="plus icon"
                                  />
                                  New item
                                </button>,
                              }
                            }
                          >
                            <RefFindNode
                              innerRef={
                                Object {
                                  "current": <button
                                    class="ui small icon positive left labeled button"
                                  >
                                    <i
                                      aria-hidden="true"
                                      class="plus icon"
                                    />
                                    New item
                                  </button>,
                                }
                              }
                            >
                              <button
                                className="ui small icon positive left labeled button"
                                onClick={[Function]}
                              >
                                <Icon
                                  as="i"
                                  name="plus"
                                >
                                  <i
                                    aria-hidden="true"
                                    className="plus icon"
                                    onClick={[Function]}
                                  />
                                </Icon>
                                New item
                              </button>
                            </RefFindNode>
                          </Ref>
                        </Button>
                      </NewButton>
                      <ExportReactSearchKitResults
                        exportBaseUrl="https://127.0.0.1:5000/api/items/"
                      />
                    </div>
                  </div>
                </GridColumn>
              </div>
            </GridRow>
          </div>
        </Grid>
        <Table
          as="table"
          selectable={true}
          striped={true}
        >
          <table
            className="ui selectable striped table"
          >
            <ResultsTableHeader
              columns={
                Array [
                  "ID",
                  "Barcode",
                  "Document ID",
                  "Status",
                  "Medium",
                  "Circulation status",
                  "Internal location",
                  "Location",
                  "Shelf",
                ]
              }
              withRowAction={true}
            >
              <TableHeader
                as="thead"
              >
                <thead
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                        collapsing={true}
                        width={2}
                      >
                        <TableCell
                          as="th"
                          className=""
                          collapsing={true}
                          width={2}
                        >
                          <th
                            className="collapsing two wide"
                          />
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="ID"
                        width={2}
                      >
                        <TableCell
                          as="th"
                          className=""
                          width={2}
                        >
                          <th
                            className="two wide"
                          >
                            ID
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Barcode"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Barcode
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Document ID"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Document ID
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Medium"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Medium
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Circulation status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Circulation status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Internal location"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Internal location
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Location"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Location
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Shelf"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Shelf
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
            </ResultsTableHeader>
            <ResultsTableBody
              columns={
                Array [
                  "ID",
                  "Barcode",
                  "Document ID",
                  "Status",
                  "Medium",
                  "Circulation status",
                  "Internal location",
                  "Location",
                  "Shelf",
                ]
              }
              rowActionClickHandler={[Function]}
              rows={
                Array [
                  Object {
                    "Barcode": "9865745223",
                    "Circulation status": null,
                    "Document ID": 1342,
                    "ID": 987,
                    "Internal location": "A library",
                    "Location": null,
                    "Medium": undefined,
                    "Shelf": undefined,
                    "Status": "IN_BINDING",
                  },
                ]
              }
            >
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test={987}
                    key="987"
                  >
                    <tr
                      className=""
                      data-test={987}
                    >
                      <TableCell
                        as="td"
                        textAlign="center"
                      >
                        <td
                          className="center aligned"
                        >
                          <Button
                            as="button"
                            circular={true}
                            compact={true}
                            data-test="btn-view-details-987"
                            icon="eye"
                            onClick={[Function]}
                          >
                            <Ref
                              innerRef={
                                Object {
                                  "current": <button
                                    class="ui circular compact icon button"
                                    data-test="btn-view-details-987"
                                  >
                                    <i
                                      aria-hidden="true"
                                      class="eye icon"
                                    />
                                  </button>,
                                }
                              }
                            >
                              <RefFindNode
                                innerRef={
                                  Object {
                                    "current": <button
                                      class="ui circular compact icon button"
                                      data-test="btn-view-details-987"
                                    >
                                      <i
                                        aria-hidden="true"
                                        class="eye icon"
                                      />
                                    </button>,
                                  }
                                }
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-987"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                      onClick={[Function]}
                                    />
                                  </Icon>
                                </button>
                              </RefFindNode>
                            </Ref>
                          </Button>
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="ID-987"
                        key="0-987"
                      >
                        <td
                          className=""
                          data-test="ID-987"
                        >
                          987
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Barcode-987"
                        key="1-987"
                      >
                        <td
                          className=""
                          data-test="Barcode-987"
                        >
                          9865745223
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Document ID-987"
                        key="2-987"
                      >
                        <td
                          className=""
                          data-test="Document ID-987"
                        >
                          1342
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Status-987"
                        key="3-987"
                      >
                        <td
                          className=""
                          data-test="Status-987"
                        >
                          IN_BINDING
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Medium-987"
                        key="4-987"
                      >
                        <td
                          className=""
                          data-test="Medium-987"
                        >
                          -
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Circulation status-987"
                        key="5-987"
                      >
                        <td
                          className=""
                          data-test="Circulation status-987"
                        >
                          -
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Internal location-987"
                        key="6-987"
                      >
                        <td
                          className=""
                          data-test="Internal location-987"
                        >
                          A library
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Location-987"
                        key="7-987"
                      >
                        <td
                          className=""
                          data-test="Location-987"
                        >
                          -
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-test="Shelf-987"
                        key="8-987"
                      >
                        <td
                          className=""
                          data-test="Shelf-987"
                        >
                          -
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </ResultsTableBody>
            <ResultsTableFooter
              allRowsNumber={1}
              columnsNumber={9}
              currentPage={1}
              paginationComponent={null}
              seeAllComponent={null}
              showAllResults={false}
              showMaxRows={10}
            />
          </table>
        </Table>
      </div>
    </Segment>
  </ResultsTable>
</ResultsList>
`;
